RESOLVED FIXED214089
ErrorInstance::finishCreation() puts "message" twice, with different attributes
https://bugs.webkit.org/show_bug.cgi?id=214089
Summary ErrorInstance::finishCreation() puts "message" twice, with different attributes
Alexey Shvayka
Reported 2020-07-08 10:58:29 PDT
Put "message" to ErrorInstance with consistent attributes
Attachments
Patch (8.05 KB, patch)
2020-07-08 16:51 PDT, Alexey Shvayka
no flags
Alexey Shvayka
Comment 1 2020-07-08 16:51:37 PDT
Alexey Shvayka
Comment 2 2020-07-08 16:52:16 PDT
(In reply to Alexey Shvayka from comment #1) > Created attachment 403823 [details] > Patch Warmed-up runs, --outer 50: r263795 patch error-source-appender 103.3675+-1.5723 ^ 97.8376+-1.3031 ^ definitely 1.0565x faster <geometric> 103.3675+-1.5723 ^ 97.8376+-1.3031 ^ definitely 1.0565x faster
Yusuke Suzuki
Comment 3 2020-07-08 17:06:31 PDT
Comment on attachment 403823 [details] Patch r=me
EWS
Comment 4 2020-07-09 01:23:40 PDT
Committed r264160: <https://trac.webkit.org/changeset/264160> All reviewed patches have been landed. Closing bug and clearing flags on attachment 403823 [details].
Radar WebKit Bug Importer
Comment 5 2020-07-09 01:24:18 PDT
Note You need to log in before you can comment on or make changes to this bug.